changed css to reserve space on small screens for images to avoid CLS

--- a/blocks/blog-home/blog-home.css
+++ b/blocks/blog-home/blog-home.css
@@ -143,6 +143,28 @@ width: 36px;
   margin-inline-start: 10px;
 }
 
+@media (max-width: 600px){
+  .blog-home .blog-card picture {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 78%; /* Adjust as needed for the aspect ratio */
+    overflow: hidden;
+  }
+  .blog-home .blog-card picture {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .blog-home .blog-card .card-content {
+    /* Additional styles for your card content */
+    margin-top: 75%; /* Adjust as needed to create space between image and text */
+  }
+
+}
+
 @media (min-width: 600px) {
   .blog-home[data-block-status="loaded"] > .blog-card {
       position: relative;
